added icons and fixed view button of notification

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -12,7 +12,7 @@
     <header>
       <div class="logo">
         <div class="logo-icon">
-          <!-- <img src="icons/icon48.png" alt="EcoSwap Logo"> -->
+          <img src="icons/logo.png" alt="EcoSwap Logo">
         </div>
         <h1>EcoSwap</h1>
       </div>
